# chist

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  install.sh
.githooks/: commit-msg
.github/workflows/: release.yml
skill/: SKILL.md
skills/claude-history/: SKILL.md
src/: cli.rs  config.rs  db.rs  hooks.rs  index.rs  main.rs  output.rs  parse.rs  search.rs  tokenize.rs
tests/: integration.rs
