[package]
name = "chist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chist"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
shell-escape = "0.1"
rayon = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
